# nanoGPTplus

./: .flake8  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  add_git_hooks.sh  pyproject.toml
.github/workflows/: code_style_fix.yaml  test.yaml
notebooks/EDA/: tiny_shakespeare.ipynb
notebooks/examples/: bigram_model_training.ipynb  gpt_model_training.ipynb  run_on_google_colab.ipynb
src/: __init__.py  config
src/config/: config.yaml
src/data/: __init__.py  dataset.py  dataset_proper.py  downloader.py  tokenizer.py
src/data/scripts/: download_tiny_shakespear.py
src/model/: README.md  __init__.py  bigram.py  bigram_lm.py  generate.py  lr_schedulers.py  train.py  trainer.py
src/model/bigram_language_model/: bigram.py
src/model/gpt_language_model/: README.md  attention.py  feed_forward.py  gpt.py  lora.py  optimizers.py  transformer_block.py
src/model/gpt_language_model/peft/: README.md  lora.py
src/model/gpt_lm/: README.md  attention.py  gpt.py  train.py
src/model/simple_bigram_lm/: bigram_lm.py  train.py
src/utils/: __init__.py  arguments.py  config.py  data.py  device.py  error.py  model.py  seed.py
tests/smoke/: dataset_test.py  generate_test.py  model_test.py  train_test.py
